Substitución de una clase obsoleta